# Megatron

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  megatron-redesign.html  megatron.db.backup  pyproject.toml
config/: policy.yaml
config/digests/: digest.md  feed.md
config/prompts/: daily_intel_v1.md  daily_security_briefing.md  github_radar_v1.md
config/sources/: example_http_pull.yaml.disabled  github_followee_feed.yaml  twitter_security_list.yaml
config/tasks/: github_followee_briefing.yaml  twitter_security_briefing.yaml
docs/: MCP_INTEGRATION.md  PLAN.md  SOUNDWAVE_INTEGRATION.md  Soundwave-对接.md  UI_REDESIGN_NEXT_STEPS.md  使用指南.md  快速上手.md  部署.md
mcp_servers/: __init__.py
mcp_servers/soundwave/: __init__.py  __main__.py  github_client.py  server.py
migrations/: env.py
migrations/versions/: 20260618_0001_initial_schema.py  20260618_0002_module_channels.py  20260618_0003_run_snapshots.py  20260618_0004_active_run_index.py  20260619_0005_mcp_support.py  20260619_0006_prompt_display_name.py  20260712_0007_source_registry.py  20260712_0008_daily_intel_prompt.py  20260712_0009_github_radar_prompt.py  20260712_0010_digest_and_policy.py  20260713_0011_publication_overrides.py  20260713_0012_publish_defaults.py  20260713_0013_publish_the_take.py  20260714_0014_github_public_redacted.py  20260714_0015_github_drop_follow.py
sources/: twitter_security_list.yaml
src/megatron/: config.py  main.py  scheduler.py
tests/: conftest.py  test_config.py
tests/test_engine/: test_agent.py  (+11 more)
(+133 files in other folders)
