[project]
name = "megatron"
version = "0.1.0"
description = "Prompt-driven LLM analysis hub - modular analysis engine with webhook delivery"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
js = [
    "playwright>=1.40.0",
]

[project.scripts]
megatron = "megatron.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/megatron"]

[tool.hatch.build.targets.sdist]
include = ["src/megatron"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
